--- a/public/css/swipe.css
+++ b/public/css/swipe.css
@@ -29,7 +29,7 @@
 }
 
 .swipe-calendar {
-    background-color: rgba(240,240,240,1);
+    background-color: #e1e1e1;
     border: 2px solid #B2DFDB;
     min-height: 600px;
     -webkit-box-shadow: 0px 4px 0px 0px rgba(29, 38, 95, 0.75);
@@ -41,7 +41,7 @@
 .swipe-area {
     position: relative;
     z-index: 1;
-    overflow: scroll;
+    overflow-x: scroll;
     min-height: 600px;
     white-space: nowrap;
     background-color: #fff;
@@ -66,20 +66,51 @@ div.employees div {
     border: 1px solid #B2DFDB;
     border-right: none;
 
-    margin-bottom: 2px;
 
 }
-
-.table-calendar {
-    border-collapse: collapse;
-    padding: 0px;
+.table-calendar td {height: 35px; padding: 2px;!important; margin: 0;}
+.table-calendar tr {
+    margin-bottom: 3px;
 }
-.table-calendar td {height: 35px; padding: 0px;!important; margin: 0;}
 
-div.rangeAccepted {
+.rangeActive {
+    background-color: lightslategray;
+    cursor:pointer;
+    border-right: none;
+    -webkit-transition: background-color 1s; /* Safari */
+    transition: background-color 1s;
+}
+.rangeActive:hover {
+    background-color: darkslategray;
+}
+
+.rangeAccepted {
     min-height: 19px;
     min-width: 30px;
     width: auto;
     min-width: 5px;
     background-color: #009688;
 }
+
+.rangeAccepted {
+    background-color: #009688;
+    cursor:pointer;
+    -webkit-transition: background-color 1s; /* Safari */
+    transition: background-color 1s;
+}
+
+.rangeAccepted:hover {
+    background-color: #00796B;
+}
+.rangeRefused {
+    background-color: #D32F2F;
+    cursor:pointer;
+    -webkit-transition: background-color 1s; /* Safari */
+    transition: background-color 1s;
+    border-right: none;
+}
+.rangeRefused:hover {
+    background-color: #b71c1c;
+}
+
+.micro-range{width: 1px; height: 1px;}
